<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".TodasAtvFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/artesanato"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/artesanato"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/coral"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/coral"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/expressao_corporal"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/expressao_corporal"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/braile"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/braile"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/informatica"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/informatica"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/educacao"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/educacao_cidadania"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/assinatura"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/assinatura"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/psicologia"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/psicologia"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/atv_vida_auto"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/atv_vida_auto"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/orientacao_mobilidade"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/orientacao_mobilidade"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/voltar"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gray"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/voltar"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/pag_inicial"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gray"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/pag_inicial"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>