<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".AtividadesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <androidx.cardview.widget.CardView
                android:id="@+id/minhas_atv"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/minhas_atividades"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/todas_atv_aadv"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/todas_atividades"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/voltar"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/gray"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/voltar"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>