<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/noticias"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/noticias"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/atividades"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/atividades"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mensagens"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/mensagens"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/SOS"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sos"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ajuda"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="130dp"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintHeight_percent="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Ajuda do Aplicativo"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>